refactor(tests): clean up test declarations and improve code quality [4/4]
- Remove unnecessary `throws Exception` declarations from test methods
- Make test class fields final where appropriate
- Improve test class structure with static inner classes
- Use diamond operator for generic instantiation
- Simplify try-with-resources in file reading
- Remove unused imports
- Fix raw type usage in generic collections
- Update assertions to use modern syntax
- Make test classes and inner classes static where possible